--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main{
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: #242625;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+}
+
+.title{
+  z-index: 2;
   color: white;
+  display: inline;
+  font-size: large;
+  font-weight: 900;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  z-index: 2;
+  display: inline;
+  padding: 10px;
+  font-size: medium;
+  color: azure;
+  background-color: blue;
+  border: 0;
+  border-radius: 20px;
+  height: 10%;
+  width: 20%;
+  box-shadow: 0 5px darkblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover {
+  cursor: pointer;
+}
+
+.btn:active {
+  background-color: darkblue;
+  box-shadow: 0 2px navy;
+}
+
+.emoji {
+  z-index: 1;
+  font-size: xxx-large;
+  position: absolute;
 }
